Doc push from publish-to-github-pages.sh

--- a/documentation.html
+++ b/documentation.html
@@ -7945,6 +7945,7 @@ table.CodeRay td.code>pre{padding:0}
 <ul class="sectlevel2">
 <li><a href="#span-class-icon-i-class-fa-fa-home-i-span-a-href-http-spohnan-github-io-geowave-geowave-site-a"><span class="icon"><i class="fa fa-home"></i></span> <a href="http://spohnan.github.io/geowave/">GeoWave Site</a></a></li>
 <li><a href="#span-class-icon-i-class-fa-fa-github-i-span-a-href-https-github-com-ngageoint-geowave-geowave-github-a"><span class="icon"><i class="fa fa-github"></i></span> <a href="https://github.com/ngageoint/geowave">GeoWave GitHub</a></a></li>
+<li><a href="#span-class-icon-i-class-fa-fa-file-archive-o-i-span-a-href-http-spohnan-github-io-geowave-packages-html-rpm-repo-a"><span class="icon"><i class="fa fa-file-archive-o"></i></span> <a href="http://spohnan.github.io/geowave/packages.html">RPM Repo</a></a></li>
 </ul>
 </li>
 <li><a href="#what-is-geowave">What is GeoWave</a>
@@ -8026,6 +8027,10 @@ table.CodeRay td.code>pre{padding:0}
 </div>
 <div class="sect2">
 <h3 id="span-class-icon-i-class-fa-fa-github-i-span-a-href-https-github-com-ngageoint-geowave-geowave-github-a"><a class="anchor" href="#span-class-icon-i-class-fa-fa-github-i-span-a-href-https-github-com-ngageoint-geowave-geowave-github-a"></a><span class="icon"><i class="fa fa-github"></i></span> <a href="https://github.com/ngageoint/geowave">GeoWave GitHub</a></h3>
+
+</div>
+<div class="sect2">
+<h3 id="span-class-icon-i-class-fa-fa-file-archive-o-i-span-a-href-http-spohnan-github-io-geowave-packages-html-rpm-repo-a"><a class="anchor" href="#span-class-icon-i-class-fa-fa-file-archive-o-i-span-a-href-http-spohnan-github-io-geowave-packages-html-rpm-repo-a"></a><span class="icon"><i class="fa fa-file-archive-o"></i></span> <a href="http://spohnan.github.io/geowave/packages.html">RPM Repo</a></h3>
 <div style="page-break-after: always;"></div>
 </div>
 </div>
@@ -9775,7 +9780,7 @@ location of the cygpath binary provided by cygwin then is should work. Eclipse a
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2014-12-13 13:24:17 EST
+Last updated 2014-12-13 14:05:20 EST
 </div>
 </div>
 </body>
