Doc push from publish-to-github-pages.sh

--- a/packages.html
+++ b/packages.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/bootstrap-theme.min.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/carousel.css">
+    <link rel="stylesheet" href="//cdn.datatables.net/1.10.4/css/jquery.dataTables.css">
     <style type='text/css'>.container-fluid { margin-top: 30px; }</style>
 </head>
 <body>
