--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/bootstrap-theme.min.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/carousel.css">
-    <style type='text/css'>.carousel-caption { border-radius: 4px; background-color: #5a5a5a; }</style>
+    <style type='text/css'>.carousel-caption{border-radius:4px;background-color:#2c2c2c;}</style>
 </head>
 <body>
 
@@ -67,32 +67,38 @@
             <div class="item active">
                 <img src="images/osmgpx-world.jpg" alt="GeoLife at city scale">
                 <div class="container">
-                    <div class="carousel-caption">
-                        <h1>About GeoWave</h1>
-                        <p>Geospatial indexing and analysis in Accumulo</p>
+                    <div class="carousel-caption panel panel-default">
+                        <div class="panel-body">
+                            <h1>About GeoWave</h1>
+                            <p>Geospatial indexing and analysis in Accumulo</p>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="item">
                 <img src="images/geolife-density-17.jpg" alt="GeoLife at house scale">
                 <div class="container">
-                    <div class="carousel-caption">
-                        <h1>Origin</h1>
-                        <p>GeoWave was developed at the National Geospatial-Intelligence Agency (NGA)</p>
+                    <div class="carousel-caption panel panel-default">
+                        <div class="panel-body">
+                            <h1>Origin</h1>
+                            <p>GeoWave was developed at the National Geospatial-Intelligence Agency (NGA)</p>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="item">
                 <img src="images/geolife-density-13.jpg" alt="GPX at world scale">
                 <div class="container">
-                    <div class="carousel-caption">
-                        <h1>Apache Licensed</h1>
-                        <p>
-                            We are releasing this software under the
-                            <a href="http://www.apache.org/licenses/LICENSE-2.0.html" target="_blank">Apache&nbsp;2.0&nbsp;license</a>
-                            to increase the impact of government investments by providing developers with the opportunity
-                            to take things in new directions.
-                        </p>
+                    <div class="carousel-caption panel panel-default">
+                        <div class="panel-body">
+                            <h1>Apache Licensed</h1>
+                            <p>
+                                We are releasing this software under the
+                                <a href="http://www.apache.org/licenses/LICENSE-2.0.html" target="_blank">Apache&nbsp;2.0&nbsp;license</a>
+                                to increase the impact of government investments by providing developers with the opportunity
+                                to take things in new directions.
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
