Doc push from publish-to-github-pages.sh

--- a/documentation.html
+++ b/documentation.html
@@ -7944,6 +7944,7 @@ table.CodeRay td.code>pre{padding:0}
 <li><a href="#links">Links</a>
 <ul class="sectlevel2">
 <li><a href="#span-class-icon-i-class-fa-fa-home-i-span-a-href-http-spohnan-github-io-geowave-geowave-site-a"><span class="icon"><i class="fa fa-home"></i></span> <a href="http://spohnan.github.io/geowave/">GeoWave Site</a></a></li>
+<li><a href="#span-class-icon-i-class-fa-fa-file-code-o-i-span-a-href-http-spohnan-github-io-geowave-apidocs-index-html-api-docs-a"><span class="icon"><i class="fa fa-file-code-o"></i></span> <a href="http://spohnan.github.io/geowave/apidocs/index.html">API Docs</a></a></li>
 <li><a href="#span-class-icon-i-class-fa-fa-github-i-span-a-href-https-github-com-ngageoint-geowave-geowave-github-a"><span class="icon"><i class="fa fa-github"></i></span> <a href="https://github.com/ngageoint/geowave">GeoWave GitHub</a></a></li>
 <li><a href="#span-class-icon-i-class-fa-fa-file-archive-o-i-span-a-href-http-spohnan-github-io-geowave-packages-html-rpm-repo-a"><span class="icon"><i class="fa fa-file-archive-o"></i></span> <a href="http://spohnan.github.io/geowave/packages.html">RPM Repo</a></a></li>
 </ul>
@@ -8031,6 +8032,10 @@ table.CodeRay td.code>pre{padding:0}
 <div class="sectionbody">
 <div class="sect2">
 <h3 id="span-class-icon-i-class-fa-fa-home-i-span-a-href-http-spohnan-github-io-geowave-geowave-site-a"><a class="anchor" href="#span-class-icon-i-class-fa-fa-home-i-span-a-href-http-spohnan-github-io-geowave-geowave-site-a"></a><span class="icon"><i class="fa fa-home"></i></span> <a href="http://spohnan.github.io/geowave/">GeoWave Site</a></h3>
+
+</div>
+<div class="sect2">
+<h3 id="span-class-icon-i-class-fa-fa-file-code-o-i-span-a-href-http-spohnan-github-io-geowave-apidocs-index-html-api-docs-a"><a class="anchor" href="#span-class-icon-i-class-fa-fa-file-code-o-i-span-a-href-http-spohnan-github-io-geowave-apidocs-index-html-api-docs-a"></a><span class="icon"><i class="fa fa-file-code-o"></i></span> <a href="http://spohnan.github.io/geowave/apidocs/index.html">API Docs</a></h3>
 
 </div>
 <div class="sect2">
@@ -9860,7 +9865,7 @@ directory.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2014-12-14 19:32:47 EST
+Last updated 2014-12-14 19:40:58 EST
 </div>
 </div>
 </body>
