Test protocol fix

--- a/packages.html
+++ b/packages.html
@@ -246,7 +246,7 @@
         var currentTab, REFRESH_INTERVAL = 900000;
 
         var list = new S3List({
-            url: 'http://s3.amazonaws.com/geowave-rpms/',
+            url: '//s3.amazonaws.com/geowave-rpms/',
             list: ['repodata', '.html'],
             cache: REFRESH_INTERVAL - 1
         });
